# OpenModelica

./: .cdtproject-sample-cdt  .classpath  .gitattributes  .gitignore  .gitmodules  .gitvalidfiles  .openmodelica.aspell  .project  .project-sample  .project-sample-cdt  BUGREPORTING.md  CITATION.bib  CITATION.cff  CITATION.md  CITATIONS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  DrControl.onb  DrModelica.onb  INSTALL.mingw.crosscompile.sh  Jenkinsfile  LICENSE  Makefile  Makefile.common  Makefile.in  Makefile.mingw  Makefile.omdev.mingw  Makefile.omsi.common  Makefile_sample.txt  Makefile~  OMNotebookHelp.onb  OSMC-License.txt  OSMC-Runtime-License.txt  OpenModelica Project Online.url  OpenModelica-TortoiseSVN+Putty-HOWTO.doc  OpenModelicaMetaProgramming.doc  OpenModelicaSystem.doc  OpenModelicaTemplateProgramming.doc  (+42 more)
BuildProjects/autotools/: Makefile.am  README  configure.ac
Compiler/: .cvsignore  Absyn.mo  Absyn.rml  AbsynDep.mo  Algorithm.mo  Algorithm.rml  BackendDAE.mo  BackendDAECreate.mo  BackendDAEEXT.mo  BackendDAEOptimize.mo  BackendDAETransform.mo  BackendDAEUtil.mo  BackendDump.mo  BackendEquation.mo  BackendVarTransform.mo  BackendVarTransform_stub.mo  BackendVariable.mo  BaseHashTable.mo  Builtin.mo  Builtin.rml  CMakeLists.txt  Ceval.mo  Ceval.rml  CevalFunction.mo  CevalScript.mo  CevalScript_stub.mo  Cevalfunc.mo  ClassInf.mo  ClassInf.rml  ClassLoader.mo  ClassLoader.rml  Codegen.mo  Codegen.rml  CompiledTemplates.mo  ComponentReference.mo  Connect.mo  Connect.rml  ConnectUtil.mo  ConnectionGraph.mo  Constants.mo  (+149 more)
Compiler/BackEnd/: AdjacencyMatrix.mo  BackendArrayVarTransform.mo  BackendDAE.mo  BackendDAECreate.mo  BackendDAEEXT.mo  BackendDAEFunc.mo  BackendDAEOptimize.mo  BackendDAETransform.mo  BackendDAEUtil.mo  BackendDump.mo  BackendEquation.mo  BackendInline.mo  BackendQSS.mo  BackendVarTransform.mo  BackendVariable.mo  BinaryTree.mo  BinaryTreeInt.mo  Causalize.mo  CommonSubExpression.mo  DAEMode.mo  DAEQuery.mo  Derive.mo  Differentiate.mo  DumpGraphML.mo  DumpHTML.mo  DynamicOptimization.mo  EvaluateFunctions.mo  EvaluateParameter.mo  ExpressionSolve.mo  FindZeroCrossings.mo  GraphML.mo  HashTableCrSimVars.mo  HashTableSM.mo  HpcOmBenchmark.mo  HpcOmBenchmarkExt.mo  HpcOmEqSystems.mo  HpcOmMemory.mo  HpcOmScheduler.mo  HpcOmSchedulerExt.mo  HpcOmSimCode.mo  (+33 more)
Compiler/FFrontEnd/: FBuiltin.mo  FCore.mo  FExpand.mo  FGraph.mo  FGraphBuild.mo  FGraphBuildEnv.mo  FGraphDump.mo  FGraphStream.mo  FInst.mo  FLookup.mo  FMod.mo  FNode.mo  FResolve.mo  FTraverse.mo  FVisit.mo
Compiler/FrontEnd/: Absyn.mo  AbsynDep.mo  AbsynUtil.mo  Algorithm.mo  BackendInterface.mo  Builtin.mo  Ceval.mo  CevalFunction.mo  CheckModel.mo  ClassInf.mo  ClassLoader.mo  ComponentReference.mo  Connect.mo  Connect2.mo  ConnectCheck.mo  ConnectEquations.mo  ConnectUtil.mo  ConnectUtil2.mo  ConnectionGraph.mo  ConnectionSets.mo  Constants.mo  DAE.mo  DAEDump.mo  DAEUtil.mo  Dependency.mo  Dump.mo  DumpGraphviz.mo  Edge.mo  Element.mo  ElementSource.mo  Env.mo  EnvExtends.mo  EvalFunction.mo  ExpandableConnectors.mo  Expression.mo  ExpressionDump.mo  ExpressionSimplify.mo  ExpressionSimplifyTypes.mo  FDependency.mo  FEnv.mo  (+132 more)
Compiler/Global/: Global.mo
Compiler/Lexers/: LexerJSON.mo  LexerModelicaDiff.mo  Makefile.in  lexerJSON.l  lexerModelicaDiff.l
Compiler/Main/: Main.mo
Compiler/MidCode/: .gitignore  DAEToMid.mo  MidCode.mo
Compiler/NFFrontEnd/: NFAlgorithm.mo  NFBinding.mo  NFBindingOrigin.mo  NFBuiltin.mo  NFBuiltinCall.mo  NFBuiltinFuncs.mo  NFCall.mo  NFCardinalityTable.mo  NFCeval.mo  NFClass.mo  NFClassTree.mo  NFComplexType.mo  NFComponent.mo  NFComponentNode.mo  NFComponentRef.mo  NFConnectEquations.mo  NFConnection.mo  NFConnectionSets.mo  NFConnections.mo  NFConnector.mo  NFConvertDAE.mo  NFDimension.mo  NFEquation.mo  NFEvalConstants.mo  NFEvalFunction.mo  NFEvalFunctionExt.mo  NFExpOrigin.mo  NFExpandExp.mo  NFExpandableConnectors.mo  NFExpression.mo  NFExpressionIterator.mo  NFExtend.mo  NFFlatModel.mo  NFFlatten.mo  NFFunc.mo  (+40 more)
OMCompiler/: .gitattributes  .gitignore  .svnprops  CMakeLists.txt  COPYING  Makefile.common  Makefile.in  Makefile.omdev.mingw  Makefile.omsi.common  OSMC-License.txt  README-BUILD-WINDOWS.txt  README-OMDev-MINGW.md  README-Windows-WSL.md  README.Linux.md  README.Windows.md  README.cmake.md  README.md  configure-post.sh  configure.ac  omc_config.h  omc_config.unix.h.in
OMEdit/: .gitignore  CMakeLists.txt  INSTALL.txt  Makefile.omdev.mingw  Makefile.unix.in  OMEdit.config.post.pri  OMEdit.config.pre.pri  OMEdit.pro  OMEdit_Wish_List.doc  README.md  README.txt  configure.ac  omedit_config.h.in
OMNotebook/: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.txt  ReadMe.txt  configure.ac  toFullForm.nb
OMParser/: .gitignore  CMakeLists.txt  Makefile  README.md  modelica.g4
OMPlot/: .gitignore  .gitmodules  CMakeLists.txt  COPYING  FindQwt.cmake  Makefile.in  Makefile.omdev.mingw  README.md  README.txt  configure.ac  qwt.txt
OMShell/: .gitignore  CMakeLists.txt  Makefile  Makefile.unix.in  OMS.sln  OMShell.config.in  OMShell.pro  OMShell.sln  OMShell.vcproj  OMShell.vcxproj  OMShell.vcxproj.filters  QWinMosh.vcproj  README-UNIX.txt  README.md  README.txt  commandcompletion.cpp  commandcompletion.h  commandunit.h  configure.ac  inputcelldelegate.h  main.cpp  omc_communication.cc  omc_communication.h  omc_communicator.cpp  omc_communicator.h  omcinteractiveenvironment.cpp  omcinteractiveenvironment.h  oms.cpp  oms.h  oms.qrc  otherdlg.h  res.rc  resource.h
c_runtime/: CMakeLists.txt  Makefile  Makefile.common  Makefile.in  ModelicaUtilities.c  ModelicaUtilities.h  README  base_array.c  base_array.h  bigden.c  bigden.f  biglag.c  blaswrap.h  boolean_array.c  boolean_array.h  build_mingw_libs.bat  compat.h  daux.c  daux.f  ddasrt.c  ddassl.c  dgesv_aux.c  division.c  division.h  dlamch.c  dlinpk.c  dogleg.c  dpmpar.c  dummy_model.cpp  dummy_model_functions.cpp  enorm.c  f2c.h  fdjac1.c  fmiModelFunctions.h  fmu_model_interface.c  fmu_model_interface.h  hybrd.c  hybrd1.c  hybrj.c  index_spec.c  (+105 more)
(+24436 files in other folders)
